Armado de Login

--- a/login.html
+++ b/login.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=., initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet"href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Login</title>
+
 </head>
 <body>
-    <header></header>
-    <section class="login-section">
-        <div>
-            <a href="#">registro</a>
-            <a href="#">inicio</a>        
-        </div>
-        <div>
-            Iniciar Sesión
-        </div>
-        <div>
-            <input type="email" name="correo" id="email" placeholder="Correo Electrónico">
-        <div>
-            <input type="password" name="contraseña" id="pass" placeholder="Contraseña">
-        </div>
-            
-        </div>        
-        <div>
-            ingresar
-        </div>
-        <div>
-            <a href="#">Registrarse</a>
-            <a href="#">Recuperar Contraseña</a>
+    <div class="modal-dialog text-center">
+        <div class="col sm-8 main-section">
+            <div class="modal-content">
+                <div class="col-12 user-img">
+                    <img src="img/avatar1.png" alt="Avatar-user">
+                </div>
+                <form  class="col-12">
+                    <div class="form-group user-group">
+                        <input type="text" class="form-control" placeholder="Nombre de Usuario">
+                    </div>
+                    <div class="form-group pss-group ">
+                            <input type="password" class="form-control" placeholder="contraseña">
+                        </div>
+                        <button type="submit" class= "btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar</button>
+                </form>
+                <div class="col-12 forgot">
+                    <a href="#">Recordar contraseña</a>
+                </div>
+                <div class="col-12 forgot">
+                        <a href="#">Registro</a>
+                    </div>
+
+            </div>
         </div>
 
 
-    </section>
-    <footer class="loging-footer">
-        links
-    </footer>
+
+    </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </body>
 </html>
