--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <title>Login</title>
 
 </head>
-<body>
+<body class="body-login">
     <div class="modal-dialog text-center">
         <div class="col sm-8 main-section">
             <div class="modal-content">
@@ -23,7 +23,7 @@
                     <div class="form-group user-group">
                         <input type="text" class="form-control" placeholder="Nombre de Usuario">
                     </div>
-                    <div class="form-group pss-group ">
+                    <div class="form-group pss-group "><i class="fas fa-user"></i>
                             <input type="password" class="form-control" placeholder="contraseña">
                         </div>
                         <button type="submit" class= "btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar</button>
