Fondo al perfil

--- a/perfil-usuario.html
+++ b/perfil-usuario.html
@@ -13,7 +13,7 @@
     <div class="container" id="perfil">
       <div class="row" id="fila1-perfil">
         <div class="col-md-4" id="sociales-perfil">
-          <img src="https://via.placeholder.com/300x250" alt="Foto Perfil">
+          <img src="img/avatar1.png" alt="Foto Perfil">
           <h2>Primer Comprador</h2>
           <a class="btn btn-primary btn-xs" href="#">Facebook</a>
           <a class="btn btn-primary btn-xs" href="#">Twitter</a>
@@ -47,7 +47,7 @@
                 <img src="img/mochila3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Podes sumarle esta mochila a tu pedido</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">especial para el estudiante actual</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -55,7 +55,7 @@
                 <img src="img/mochila6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Esta otra mochila podria ser tuya también</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">No dejes pasar esta oportunidad</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -63,7 +63,7 @@
                 <img src="img/mochila7.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">¿Que tal esta mochila para tu notebook?</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Justo el tamaño y la protección necesaria</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
